# tshark_ecs

./: pyproject.toml  requirements.txt  tshark_ecs.py
tshark_ecs/: __init__.py  cli.py
