[project]
name = "tshark_ecs"
version = "0.25"
dependencies = [
    "git+https://github.com/vphpersson/ecs_py.git#egg=ecs_py"
]

[project.optional-dependencies]
cli = [
    "git+https://github.com/vphpersson/ecs_tools_py.git#egg=ecs_tools_py",
    "git+https://github.com/vphpersson/typed_argument_parser.git#egg=typed_argument_parser"
]

public_suffix = [
    "ecs_tools_py[public_suffix] @ git+https://github.com/vphpersson/ecs_tools_py.git#egg=ecs_tools_py",
    "git+https://github.com/vphpersson/public_suffix.git#egg=public_suffix"
]
